--- a/benches/cargo_bench/Cargo.toml
+++ b/benches/cargo_bench/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Jack O'Connor <oconnor663@gmail.com>"]
 
 [dependencies]
-blake2b_simd = { path = "../.." }
+blake2s_simd = { path = "../.." }
 libsodium-ffi = { version = "0.1.12", optional = true }
 openssl = { version = "0.10.12", optional = true }
 
