--- a/benches/count_cycles/Cargo.toml
+++ b/benches/count_cycles/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Jack O'Connor <oconnor663@gmail.com>"]
 
 [dependencies]
 amd64_timer = "1.2.0"
-blake2b_simd = { path = "../.." }
+blake2s_simd = { path = "../.." }
 openssl = "0.10.12"
